@@ -1,7 +1,6 @@
 package de.training.db.service;
 
 import java.net.URI;
-import java.net.URL;
 import java.util.List;
 import java.util.UUID;
 
@@ -37,7 +36,7 @@ import lombok.SneakyThrows;
  * A {@link Service} bean for database operations, using a {@link Mapper} and a {@link JpaRepository}.
  * 
  * @since 2022-03-15
- * @version 1.1
+ * @version 1.2
  * @author Dirk Weissmann
  *
  */
@@ -165,13 +164,15 @@ public class StoreService {
         final String imageUrlString = minioConfigDto.url() + ":" + minioConfigDto.browsePort() + "/buckets/"
                 + minioConfigDto.imagesBucketName() + "/browse/" + imageId;
 
-        final PhotoUrlEntity urlEntity = new PhotoUrlEntity(entity, new URL(imageUrlString));
+        final URI minioUri = URI.create(imageUrlString);
+
+        final PhotoUrlEntity urlEntity = new PhotoUrlEntity(entity, minioUri.toURL());
 
         photoUrlRepository.save(urlEntity);
 
         minioService.storeImage(body, imageId, contentType);
 
-        return URI.create(imageUrlString);
+        return minioUri;
     }
 
     /**
